--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,8 @@
     <!-- Editor pet failed or successful messages -->
     <string name="editor_insert_pet_failed">Error saving pet</string>
     <string name="editor_insert_pet_successful">Pet saved</string>
+
+    <!-- Texts for the empty view -->
+    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
+    <string name="empty_view_subtitle_text">Get started by adding a pet</string>
 </resources>
